# stringsearch

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  fuzz.sh  loop.sh  shell.nix
crates/cdivsufsort/: Cargo.toml  LICENSE  README.md  build.rs
crates/cdivsufsort/c-sources/: divsufsort.c  divsufsort.h  divsufsort_private.h  sssort.c  trsort.c
crates/cdivsufsort/src/: lib.rs
crates/dc3/: Cargo.toml  README.md
crates/dc3/src/: lib.rs
crates/divsufsort/: Cargo.toml  README.md
crates/divsufsort/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/divsufsort/src/: common.rs  crosscheck.rs  divsufsort.rs  lib.rs  sssort.rs  trsort.rs
crates/divsuftest/: .gitignore  Cargo.toml
crates/divsuftest/crosscheck/: c  rust
crates/divsuftest/src/: main.rs
crates/sacabase/: Cargo.toml  README.md
crates/sacabase/src/: lib.rs
crates/sacapart/: Cargo.toml  README.md
crates/sacapart/src/: lib.rs
crosscheck/: typeBstar-rust
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
original/: config.h  divsufsort.c  divsufsort.h  divsufsort_private.h  sssort.c  trsort.c
src/: common.rs  crosscheck.rs  divsufsort.rs  main.rs  sssort.rs  trsort.rs
testdata/: input.txt
