[package]
name = "divsufsort"
version = "2.0.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

description = "Rust port of Yuta Mori's divsufsort"
repository = "https://github.com/fasterthanlime/stringsearch"
readme = "README.md"
keywords = ["saca", "suffix", "search", "index", "divsufsort"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[features]
crosscheck = ["once_cell"]

[dependencies]
once_cell = { version = "1.2.0", optional = true }
sacabase = { path = "../sacabase", version = "2.0.0" }
