[package]
name = "divsuftest"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
divsufsort = { path = "../divsufsort", features = ["crosscheck"] }
cdivsufsort = { path = "../cdivsufsort", features = ["crosscheck"] }
suffix_array = "0.4.0"
better-panic = "0.2.0"
size_format = "1.0.2"
