[package]
name = "sacabase"
version = "2.0.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

description = "Base types and functions for suffix arrays and longest substring search"
repository = "https://github.com/fasterthanlime/stringsearch"
readme = "README.md"
keywords = ["saca", "suffix", "search", "index"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
num-traits = "0.2.9"
