[package]
name = "sacapart"
version = "2.0.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

description = "Partitioned suffix arrays, for use with `sacabase`"
repository = "https://github.com/fasterthanlime/stringsearch"
readme = "README.md"
keywords = ["saca", "suffix", "search", "index"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
sacabase = { path = "../sacabase", version = "2.0.0" }
num-traits = "0.2.9"
rayon = "1.2.1"

[dev-dependencies]
divsufsort = { path = "../divsufsort", version = "2.0.0" }
